updated some CSS, moved admin button on index page to bottom right, fixed line spacing on H1

--- a/public/css/module.css
+++ b/public/css/module.css
@@ -197,3 +197,7 @@ vertical-align: middle;
 #initialInput {
   margin: auto;
 }
+
+#admin {
+margin-left: 75%;
+}
